# ecommerce_integrations

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .releaserc  .semgrepignore  MANIFEST.in  README.md  SHOPIFY_NULL_PRODUCT_ID_TECHNICAL_DOCUMENTATION.md  SHOPIFY_ORDER_UPDATE_WEBHOOK_DOCUMENTATION.md  codecov.yml  dev-requirements.txt  license.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/helper/: install.sh  site_config.json
.github/workflows/: ci.yml  ci2.yml  dev_fix.yml  linters.yml  release.yml  semgrep.yml
ecommerce_integrations/: __init__.py  boot.py  hooks.py  modules.txt  patches.txt  uninstall.py
ecommerce_integrations/amazon_sp_api/: amazon_methods.py  amazon_sp_api.py
ecommerce_integrations/config/: desktop.py  docs.py
ecommerce_integrations/controllers/: customer.py  inventory.py  scheduling.py  setting.py
ecommerce_integrations/controllers/tests/: test_setting.py
ecommerce_integrations/ecommerce_integrations/: utils.py
ecommerce_integrations/ecommerce_integrations/custom/: item.json  item_barcode.json
ecommerce_integrations/fixtures/: custom_field.json
ecommerce_integrations/patches/: copy_amazon_single_doc.py  migrate_shopify_settings.py  set_default_amazon_item_fields_map.py  set_default_shopify_auth_method.py  update_shopify_custom_fields.py  update_woocommerce_items.py
ecommerce_integrations/public/: build.json
ecommerce_integrations/shopify/: ONBOARDING.md  Readme.md  connection.py  constants.py  customer.py  fulfillment.py  inventory.py  invoice.py  oauth.py  order.py  product.py  real_time_update.py  return.py  theme_template.py  utils.py  work_order.py
ecommerce_integrations/shopify/docs/: SESSION-NOTES-2026-05-04.md
ecommerce_integrations/shopify/doctype_triggers/: delivery_note.py  realtime_inventory_sync.py
ecommerce_integrations/shopify/tests/: test_connection.py  test_order.py  test_product.py  utils.py
ecommerce_integrations/tests/: __init__.py  utils.py
ecommerce_integrations/unicommerce/: api_client.py  cancellation_and_returns.py  constants.py  customer.py  delivery_note.py  grn.py  inventory.py  invoice.py  order.py  pick_list.py  product.py  status_updater.py  utils.py
ecommerce_integrations/unicommerce/custom/: delivery_note.json  delivery_note_item.json  packed_item.json
ecommerce_integrations/unicommerce/tests/: test_client.py  test_customer.py  test_delivery_note.py  test_inventory.py  test_invoice.py  test_order.py  utils.py  (+2 more)
ecommerce_integrations/utils/: before_test.py  naming_series.py  price_list.py  taxation.py
ecommerce_integrations/whataform/: connection.py  constants.py  customer.py  order.py  product.py  utils.py
ecommerce_integrations/woocommerce/: connection.py  constants.py  woocommerce_connection.py
ecommerce_integrations/zenoti/: purchase_transactions.py  sales_transactions.py  stock_reconciliation.py  transfer_transactions.py  utils.py
(+185 files in other folders)
