[project]
name='ecommerce_integrations'
description='Ecommerce integrations for ERPNext'
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
requires-python = ">=3.10"
readme = "./README.md"
dynamic = ["version"]

dependencies = [
    "ShopifyAPI==12.3.0",  # update after resolving pyjwt conflict in frappe
    "boto3~=1.28.10",
]

[project.license]
file = "./LICENSE"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "	"
