[project]
name='ecommerce_integrations'
description='Ecommerce integrations for ERPNext'
authors = [
    { name = "Frappe Technologies Pvt Ltd", email = "developers@frappe.io"}
]
requires-python = ">=3.10,<3.15"
readme = "./README.md"
dynamic = ["version"]

dependencies = [
    "ShopifyAPI==12.4.0",  # update after resolving pyjwt conflict in frappe
    "boto3~=1.34.143",
]

[project.urls]
Repository = "https://github.com/frappe/ecommerce_integrations.git"
"Bug Reports" = "https://github.com/frappe/ecommerce_integrations/issues"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"

[project.license]
file = "./LICENSE"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017",   # assertRaises(Exception) - should be more specific
    "B018",   # useless expression, not assigned to anything
    "B023",   # function doesn't bind loop variable - will have last iteration's value
    "B904",   # raise inside except without from
    "E101",   # indentation contains mixed spaces and tabs
    "E402",   # module level import not at top of file
    "E501",   # line too long
    "E741",   # ambiguous variable name
    "F401",   # "unused" imports
    "F403",   # can't detect undefined names from * import
    "F405",   # can't detect undefined names from * import
    "F722",   # syntax error in forward type annotation
    "W191",   # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort.sections]
"frappe" = ["frappe"]
"erpnext" = ["erpnext"]
"ecommerce_integrations" = ["ecommerce_integrations"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "frappe",
    "erpnext",
    "ecommerce_integrations",
    "first-party",
    "local-folder",
]
